# flink_local

./: .gitignore  Dockerfile  Makefile  README.md  cp_queries.txt  docker-compose.yaml  notes.txt  pyproject.toml
jobs/conf/: flink-conf.yaml
scripts/: 01_generate_fake_csv.py
scripts/02_fake_colored_generator/: data_generator.py  gen_base.py
